code25_all/scala/13965864.txt
    object pascal {
        def main(c: Int, r: Int) = {
                pascal(c, r)
            }
            def pascal(c: Int, r: Int) = {
                (c, r) match {
                    case ((r < 0) || (c < 0)) => throw new Exception
                                                 ("r and c must be > 0")
                    case r == 0 => 1
                    case r == 1 => 1
                    case c == 0 => 1
                    case r == c => 1
                    case _ => pascal(r-1,c-1) + pascal(r-1,c-1)
            }
        }
     }

vagrant@precise64:/vagrant/Workspace/Scala/hw1$ scalac pascal.scala
pascal.scala:7: error: not found: value ||
                        case ((r < 0) || (c < 0)) => throw ...
                                      ^
pascal.scala:8: error: value == is not a case class constructor, nor 
does it have an unapply/unapplySeq method
                        case r == 0 => 1

